[tool.poetry]
name = "vae"
version = "0.1.0"
description = "Variational AutoEncoder simple implementation"
authors = ["ivallesp <ivanvallesperez@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
numpy = "^1.18.2"
torch = "^1.4.0"
torchvision = "^0.5.0"
scipy = "^1.4.1"
tqdm = "^4.43.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.2.0"
ipython = "^7.13.0"
ipykernel = "^5.1.4"
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
